--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+
     <link rel="stylesheet" href="./style.css" />
     <style>
       body {
@@ -14,6 +19,12 @@
   </head>
   <body
     style="background-image: url(./assets/pic/photo_2024-12-17_13-57-32.jpg)"
+    background-size:
+    cover;
+    background-repeat:
+    no-repeat;
+    background-position:
+    center;
   >
     <div class="container">
       <div class="navbar">
@@ -29,13 +40,11 @@
       </div>
       <div class="content">
         <h5>
-          <img src="./assets/pic/image 24524.png" /> off for the first 100
+          <img src="./assets/pic/image 24524.png" /> $100 off for the first 100
           buyers
         </h5>
-        <h1>
-          <div class="gradiant">Unlock the Future</div>
-          of Digital Art and Ownership
-        </h1>
+        <h1 class="gradiant">Unlock the Future</h1>
+        <h1>of Digital Art and Ownership</h1>
         <h4>
           Explore, Collect, and Trade Unique NFTs in a Seamless Experience
         </h4>
