--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h4>
           Explore, Collect, and Trade Unique NFTs in a Seamless Experience
         </h4>
-        <h3 class="but2">Get Start</h3>
+        <a class="but2" href="https://www.nft.org/">Get Start</a>
         <footer>
           <img src="./assets/pic/Group 2085665089.png" />
         </footer>
