--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-
+    <link
+      rel="shortcut icon"
+      href="./assets/NFT Marketplace Development - Launch an Exclusive NFT Platform Imminently!.jpg"
+      type="image/x-ico"
+    />
     <link rel="stylesheet" href="./style.css" />
     <style>
       body {
@@ -15,7 +20,7 @@
       }
     </style>
 
-    <title>Document</title>
+    <title>NFT</title>
   </head>
   <body
     style="background-image: url(./assets/pic/photo_2024-12-17_13-57-32.jpg)"
