--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
     center;
   >
     <div class="container">
-      <div class="navbar">
-        <nav>
-          <ul>
-            <img src="./assets/pic/image 24515.png" />
-            <li>Maildlow for</li>
-            <li>What we do</li>
-            <li>How it wprks</li>
-            <li id="button">Log in</li>
-          </ul>
-        </nav>
-      </div>
+      <nav class="navbar">
+        <div class="logo">
+          <img src="./assets/pic/image 24515.png" />
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">Maillow for</a></li>
+          <li><a href="#">What we do</a></li>
+          <li><a href="#">How it works</a></li>
+        </ul>
+        <button class="login-btn">Log in</button>
+      </nav>
+
       <div class="content">
         <h5>
           <img src="./assets/pic/image 24524.png" /> $100 off for the first 100
